Fix logo misalignment when using languages that are more verbose than English

--- a/internal/ui/static/css/common.css
+++ b/internal/ui/static/css/common.css
@@ -332,7 +332,6 @@ a:hover {
         text-align: left;
         float: left;
         margin-right: 15px;
-        margin-left: 5px;
     }
 
     .header li {
